src/objects/ACCL__Sales_Folder_Sell_Sheet__c.object
<CustomObject>
    <description>The object holds the details of the relationship between sales folder and sell sheet.</description>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the sales folder sell sheet record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Folder__c</fullName>
        <description>Reference to the Sales Folder.</description>
        <label>Sales Folder</label>
        <referenceTo>ACCL__Sales_Folder__c</referenceTo>
        <relationshipLabel>Sell Sheets</relationshipLabel>
        <relationshipName>Sales_Folder_Sell_Sheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org which the sales folder sell sheet belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sell_Sheet_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field will be used to ensure one sell sheet is attached only once to a sales folder. This will be a concatenation of Sales Folder Id and Sell Sheet Id. This will be updated by a Workflow.</description>
        <label>Sell Sheet</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Sell_Sheet__c</fullName>
        <description>Reference to the Sell Sheet.</description>
        <label>Sell Sheet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Sell_Sheet__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>ACCL__Sell_Sheet__c.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Sell_Sheet__c</referenceTo>
        <relationshipLabel>Sales Folder Sell Sheets</relationshipLabel>
        <relationshipName>Sales_Folder_Sell_Sheets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <description>Sort Field for Sales Folder Sell Sheet.</description>
        <label>Sort</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Folder Sell Sheet</label>
    <nameField>
        <displayFormat>SFS-{00000000}</displayFormat>
        <label>Sales Folder Sell Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Folder Sell Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Sell_Sheet_Sales_Org_Equals_Sales_Folder</fullName>
        <active>true</active>
        <description>The Sales Folder Sell Sheet, Sales Folder and Sell Sheet must have the same Sales Org.</description>
        <errorConditionFormula>OR (TEXT(ACCL__Sell_Sheet__r.ACCL__Sales_Org__c) &lt;&gt; TEXT(ACCL__Sales_Org__c),
TEXT(ACCL__Sales_Folder__r.ACCL__Sales_Org__c) &lt;&gt; TEXT(ACCL__Sales_Org__c),
TEXT( ACCL__Sell_Sheet__r.ACCL__Sales_Org__c) &lt;&gt; TEXT(ACCL__Sales_Folder__r.ACCL__Sales_Org__c))</errorConditionFormula>
        <errorMessage>The Sales Folder Sell Sheet, Sales Folder and Sell Sheet must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_user_from_selecting_Other_KAcc</fullName>
        <active>true</active>
        <description>MDLZ_Restrict user from selecting Other KeyAccount</description>
        <errorConditionFormula>TEXT(ACCL__Sell_Sheet__r.MDLZ_KeyAccount__c) != ACCL__Sales_Folder__r.MDLZ_KeyAccount__c</errorConditionFormula>
        <errorMessage>Sales Folder and Sell Sheet attached should have same Key Account populated.</errorMessage>
    </validationRules>
</CustomObject>